// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverN Basic should match the snapshot 1`] = `
<div>
  <div
    style="display: flex; justify-content: center; align-items: center;"
  >
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      class="ButtonUnstyled-root mc-c-iiEeHJ mc-c-iiEeHJ-kQqyOW-btnType-secondary mc-c-iiEeHJ-fcHofs-size-md"
      role="button"
      type="button"
    >
      <span>
        What does 42 mean?
      </span>
    </button>
  </div>
</div>
`;

exports[`PopoverN ContextMenu should match the snapshot 1`] = `
<div>
  <div
    style="display: flex; justify-content: center; align-items: center;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="dialog"
      style="height: 4rem; width: 100%; display: flex; justify-content: center; align-items: center; background-color: rgb(239, 239, 239);"
    >
      Click
    </div>
  </div>
</div>
`;
